# Apex-Engine

./: .gitignore  CMakeLists.txt
engine/core/: application.cpp  application.h  elementbuffer.cpp  elementbuffer.h  input.cpp  input.h  key.h  math.h  renderer.cpp  renderer.h  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  time.cpp  time.h  transform.cpp  transform.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  window.cpp  window.h
game/: asteroidsScene.cpp  asteroidsScene.h  demoscene.cpp  demoscene.h
game/asteroids/: asteroidsScene.cpp  asteroidsScene.h  ship.cpp  ship.h
includes/: shader.h
shaders/: shader.fs  shader.vs
src/: main.cpp
